UI integrated for enquiries listing, settings and configuration

--- a/app/views/allow_ips/index.html.erb
+++ b/app/views/allow_ips/index.html.erb
@@ -1,3 +1,5 @@
+<!-- rendering the left menu -->
+<%= render 'resources/menu' %>
 <!-- resources -->
 <% resource_disp1 = "Allow New Ip Range" %>
 <% resource_disp2 = "Allowed Ips" %>
