--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,4 +10,30 @@
 *
 *= require bootstrap
 *= require custom
+*= require dt-bootstrap
+*= require multi-select
+
 */
+
+
+.well tr.enq_reg td {background: #e1f5e0 !important; }
+.well tr.fu_week td {background: #f8f4b0 !important; }
+.well tr.fu_now td {background: #f7d0d0 !important; }
+
+
+.modal-dialog {
+margin-top:50%;
+}
+.modal-content {
+margin-top:-50%;
+}
+
+.tooltip-c {
+  position: absolute;
+  font-size: 12px;
+  line-height: 1.4;
+  cursor: help;
+}
+
+
+
