--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,3 +1,6 @@
+<!-- rendering the left menu -->
+<%= render 'resources/menu' %>
+
 <!-- branches more information -->
 
 <% resource_disp1 = "Branch" %>
